WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287911
[iOS] Various tests hit debug assertions underneath `baseTextDirection` when turning on `BidiContentAwarePasteEnabled`
https://bugs.webkit.org/show_bug.cgi?id=287911
Summary
[iOS] Various tests hit debug assertions underneath `baseTextDirection` when ...
Wenson Hsieh
Reported
2025-02-18 16:48:11 PST
rdar://145098905
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-02-18 17:34:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40818
EWS
Comment 2
2025-02-18 20:29:58 PST
Committed
290590@main
(edf1c2158c62): <
https://commits.webkit.org/290590@main
> Reviewed commits have been landed. Closing PR #40818 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug